--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2021.10.8
 charset-normalizer==2.0.7
 Django==3.2.9
 django-cors-headers==3.10.0
+django-environ==0.8.1
 django-phonenumber-field==6.0.0
 djangorestframework==3.12.4
 djangorestframework-simplejwt==5.0.0
